--- a/old_test_files/index.html
+++ b/old_test_files/index.html
@@ -7,12 +7,15 @@
   <!-- <script src="https://d3js.org/d3.v6.min.js"></script> -->
   <!-- <script src="https://d3js.org/d3-sankey.v0.66.min.js"></script> -->
   <!-- <script type="module" src="{{ url_for('static',filename='/scripts/d3/sankey.js') }}"></script> -->
-  <script src="https://d3js.org/d3.v6.min.js"></script>
+  <!-- <script src="https://d3js.org/d3.v6.min.js"></script>
   <script src="https://unpkg.com/d3-array@1"></script>
     <script src="https://unpkg.com/d3-collection@1"></script>
     <script src="https://unpkg.com/d3-path@1"></script>
     <script src="https://unpkg.com/d3-shape@1"></script>
-    <script src="https://unpkg.com/d3-sankey@0"></script>
+    <script src="https://unpkg.com/d3-sankey@0"></script> -->
+    <!-- <script src="https://cdn.jsdelivr.net/gh/holtzy/D3-graph-gallery@master/LIB/sankey.js"></script> -->
+    <script src="https://d3js.org/d3.v4.min.js"></script>
+
   <script type="module">
   </script>
 </head>
@@ -55,8 +58,43 @@
 </script>
 
 <style>
-    body{
+     body{
         background-color: #333;
     }
+/*
+    .node {
+  cursor: pointer;
+  stroke: #000;
+  }
+  .link {
+    fill: none;
+    stroke: #000;
+    stroke-opacity: 0.2;
+  }
+  .link:hover {
+    stroke-opacity: 0.5;
+  } */
+
+  .node rect {
+  cursor: move;
+  fill-opacity: .9;
+  shape-rendering: crispEdges;
+}
+ 
+.node text {
+  pointer-events: none;
+  text-shadow: 0 1px 0 #fff;
+}
+ 
+.link {
+  fill: none;
+  stroke: #000;
+  stroke-opacity: .2;
+}
+ 
+.link:hover {
+  stroke-opacity: .5;
+}
+
 </style>
 </html>
