--- a/old_test_files/index.html
+++ b/old_test_files/index.html
@@ -22,7 +22,7 @@
 <body>
   <div id="sankey-container"></div>
   <!-- <script src="your_script.js"></script> -->
-  <script type="module" src="{{ url_for('static',filename='/scripts/new_sankey_test.js') }}" defer></script>
+  <script type="module" src="scripts\new_sankey_test.js" defer></script>
 </body>
 <script>
     //test data
